# codex

./: pnpm-lock.yaml
codex-cli/: package.json
codex-cli/src/mcp/: config.ts  instance.ts
codex-cli/tests/mcp/: config.test.ts
codex-rs/ansi-escape/: Cargo.toml
codex-rs/apply-patch/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/common/: Cargo.toml
codex-rs/core/: Cargo.toml
codex-rs/exec/: Cargo.toml
codex-rs/execpolicy/: Cargo.toml
codex-rs/mcp-client/: Cargo.toml
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-types/: Cargo.toml
codex-rs/tui/: Cargo.toml
docs/: codex-cli-architecture.md  mcp_client_integration_design.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
